; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_olecmd.c_exec_respectvisibility_indesign.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_olecmd.c_exec_respectvisibility_indesign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"(%p)->(%x %s %p)\0A\00", align 1
@VT_BOOL = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [25 x i8] c"Unsupported argument %s\0A\00", align 1
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @exec_respectvisibility_indesign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_respectvisibility_indesign(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32*, i32** %7, align 8
  %12 = call i32 @debugstr_variant(i32* %11)
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @TRACE(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32* %9, i32 %10, i32 %12, i32* %13)
  %15 = load i32*, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %26

17:                                               ; preds = %4
  %18 = load i32*, i32** %7, align 8
  %19 = call i64 @V_VT(i32* %18)
  %20 = load i64, i64* @VT_BOOL, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %26, label %22

22:                                               ; preds = %17
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @V_BOOL(i32* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %30, label %26

26:                                               ; preds = %22, %17, %4
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @debugstr_variant(i32* %27)
  %29 = call i32 @FIXME(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %26, %22
  %31 = load i32, i32* @S_OK, align 4
  ret i32 %31
}

declare dso_local i32 @TRACE(i8*, i32*, i32, i32, i32*) #1

declare dso_local i32 @debugstr_variant(i32*) #1

declare dso_local i64 @V_VT(i32*) #1

declare dso_local i32 @V_BOOL(i32*) #1

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
